--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
   <groupId>TYSS</groupId>
   <artifactId>AdvanceSelenium</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+   <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <build>
   <plugins>
   <plugin>
